--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.3.2",
     "react-mounter": "^1.2.0",
     "react-redux": "^5.0.7",
+    "react-spinkit": "^3.0.0",
     "redux": "^4.0.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
