--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/runtime": "^7.0.0-beta.42",
     "axios": "^0.18.0",
     "meteor-node-stubs": "^0.3.2",
+    "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-mounter": "^1.2.0",
